--- a/src/Cake.PinNuGetDependency.Tests/Cake.PinNuGetDependency.Tests.csproj
+++ b/src/Cake.PinNuGetDependency.Tests/Cake.PinNuGetDependency.Tests.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cake.Core" Version="0.22.0" />
-    <PackageReference Include="Cake.Testing" Version="0.22.0" />
-    <PackageReference Include="xunit" Version="2.3.0-beta5-build3769" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-beta5-build3769" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="Cake.Core" Version="0.29.0" />
+    <PackageReference Include="Cake.Testing" Version="0.29.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,5 +19,4 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
- 
 </Project>
