--- a/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
+++ b/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
@@ -22,6 +22,9 @@
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.31.0" PrivateAssets="All" />
     <PackageReference Include="Cake.Common" Version="0.31.0" PrivateAssets="All" />
+    <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
+    <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
