--- a/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
+++ b/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);CopyProjectReferencesToPackage</TargetsForTfmSpecificBuildOutput>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -22,28 +22,6 @@
   <ItemGroup>
     <PackageReference Include="Cake.Core" Version="0.31.0" PrivateAssets="All" />
     <PackageReference Include="Cake.Common" Version="0.31.0" PrivateAssets="All" />
-    <PackageReference Include="System.Security.Permissions" Version="4.5.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
-    <PackageReference Include="System.Text.Encoding.Extensions" Version="4.3.0" />
+    <PackageReference Include="DotNetZip" Version="1.13.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\contrib\DotNetZip.dll" Link="DotNetZip.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="DotNetZip">
-      <HintPath>..\..\contrib\DotNetZip.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <!-- https://github.com/NuGet/Home/issues/3891 -->
-  <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveProjectReferences">
-    <ItemGroup>
-      <BuildOutputInPackage Include="$(OutputPath)DotNetZip.dll" />
-    </ItemGroup>
-  </Target>
-
 </Project>
