--- a/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
+++ b/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
@@ -15,13 +15,13 @@
     <Authors>ghuntley</Authors>
     <Owners>ghuntley</Owners>
     <PackageProjectUrl>https://github.com/cake-contrib/Cake.PinNuGetDependency</PackageProjectUrl>
-    <PackageIconUrl>https://cdn.rawgit.com/cake-contrib/graphics/a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</PackageIconUrl>
+    <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/cake-contrib-medium.png</PackageIconUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/cake-contrib/Cake.PinNuGetDependency/master/LICENSE.md</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cake.Core" Version="0.31.0" PrivateAssets="All" />
-    <PackageReference Include="Cake.Common" Version="0.31.0" PrivateAssets="All" />
-    <PackageReference Include="DotNetZip" Version="1.13.0" />
+    <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
+    <PackageReference Include="Cake.Common" Version="0.33.0" PrivateAssets="All" />
+    <PackageReference Include="DotNetZip" Version="1.13.3" />
   </ItemGroup>
 </Project>
