--- a/src/Cake.PinNuGetDependency.Tests/Cake.PinNuGetDependency.Tests.csproj
+++ b/src/Cake.PinNuGetDependency.Tests/Cake.PinNuGetDependency.Tests.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Cake.Core" Version="0.30.0" PrivateAssets="All" />
+    <PackageReference Include="Cake.Core" Version="0.33.0" PrivateAssets="All" />
     <PackageReference Include="Cake.Testing" Version="0.30.0" PrivateAssets="All" />
     <PackageReference Include="xunit" Version="2.4.1" PrivateAssets="All" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0-preview-20190715-02" />
   </ItemGroup>
 
   <ItemGroup>
