--- a/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
+++ b/src/Cake.PinNuGetDependency/Cake.PinNuGetDependency.csproj
@@ -13,10 +13,12 @@
     <Description>Cake Build addin used to lock dependency versions within NuGet packages.</Description>
     <PackageTags>Cake Script Build</PackageTags>
     <Authors>ghuntley</Authors>
-    <Owners>ghuntley</Owners>
+    <Owners>ghuntley;cake-contrib</Owners>
     <PackageProjectUrl>https://github.com/cake-contrib/Cake.PinNuGetDependency</PackageProjectUrl>
     <PackageIconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/cake-contrib-medium.png</PackageIconUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/cake-contrib/Cake.PinNuGetDependency/master/LICENSE.md</PackageLicenseUrl>
+    <RepositoryUrl>https://github.com/cake-contrib/Cake.PinNuGetDependency.git</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
